--- a/Lab00/Lab00.ipynb
+++ b/Lab00/Lab00.ipynb
@@ -1310,7 +1310,7 @@
    "source": [
     "At the end of lab, before submitting your work, we will ask you to restart + rerun your entire notebook to make sure that everything runs correctly and without error. Let's practice how to do that here! \n",
     "\n",
-    "- First, go to the very top bar in Jupyter lab (with File, Edit, View...) and then click \"Cell\". From the dropdown menu, select \"Run All Cells\". It will take a few seconds for the entire notebook to execute.\n",
+    "- First, go to the very top bar in Jupyter lab (with File, Edit, View...) and then click \"Run\". From the dropdown menu, select \"Run All Cells\". It will take a few seconds for the entire notebook to execute.\n",
     "\n",
     "- You should look through the whole notebook and make sure it looks right. If the entire notebook runs without errors, fantastic! You're then ready to submit your work. If there are errors, see if there is something obvious you can fix. If you need help figuring out what's wrong, ask us!\n",
     "\n",
@@ -1320,7 +1320,7 @@
     "\n",
     "- Finally: submit the html file that you just downloaded to the Lab00 submission assignment on Canvas. \n",
     "\n",
-    "If there was anything in this notebook that you didn't understand or aren't comfortable with, now is a great time to talk to your table-mates about it or to ask the course staff."
+    "If there was anything in this notebook that you didn't understand or aren't comfortable with, please ask us at a drop-in session or on Piazza."
    ]
   },
   {
@@ -1350,7 +1350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
