remove some optionals from lab 1 prelab

--- a/Lab01/Lab01-prelab.ipynb
+++ b/Lab01/Lab01-prelab.ipynb
@@ -181,7 +181,7 @@
     "id": "647b907a-70ae-451f-9474-ade6ec24d06d"
    },
    "source": [
-    "For the curious, the next two optional sections will go into some basics of typing mathematical expressions in Latex. However, this will not be required knowledge for this course, and more important is to know how to format Latex code that we will provide you."
+    "The next two sections will go into some basics of typing mathematical expressions in Latex. For the most part in the course you will be provided with Latex code to use or modify."
    ]
   },
   {
@@ -193,7 +193,7 @@
     "tags": []
    },
    "source": [
-    "# More basics of Latex (_Optional_)"
+    "# More basics of Latex"
    ]
   },
   {
@@ -226,7 +226,7 @@
     "tags": []
    },
    "source": [
-    "### **Task 3 (Optional):** Making your own simple equation\n",
+    "### **Task 3:** Making your own simple equation\n",
     "\n",
     "Add a new Markdown cell below. Copy and paste and following equation and simplify the expression (add an equal sign to the right of the existing equation and format the simplified expression):\n",
     "\n",
@@ -242,7 +242,7 @@
     "tags": []
    },
    "source": [
-    "# More involved Latex formatting (*Optional*)"
+    "# More involved Latex formatting"
    ]
   },
   {
@@ -638,34 +638,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "6f1e2bca45dc4997ade34f38a6076e7d": {
-      "model_module": "ipydatagrid",
-      "model_module_version": "^1.1.13",
-      "model_name": "VegaExprModel",
-      "state": {
-       "_model_module_version": "^1.1.13",
-       "_view_module": "ipydatagrid",
-       "_view_module_version": "^1.1.13",
-       "_view_name": "VegaExprView"
-      }
-     },
-     "a9d0f964574342168c4f220602052ab4": {
-      "model_module": "ipydatagrid",
-      "model_module_version": "^1.1.13",
-      "model_name": "VegaExprModel",
-      "state": {
-       "_model_module_version": "^1.1.13",
-       "_view_module": "ipydatagrid",
-       "_view_module_version": "^1.1.13",
-       "_view_name": "VegaExprView"
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
