fix image in lab 1 prelab

--- a/Lab01/Lab01-prelab.ipynb
+++ b/Lab01/Lab01-prelab.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "Recall from Lab 00 that the basic elements of a Jupyter notebook are cells. In each individual cell we can choose one of three formats: **Markdown, Code, or raw (no special formatting)**. For the purposes of this course, we will only select **Markdown** or **Code**. The cell type can be changed from the dropdown menu at the top of the notebook, as shown in the image below.\n",
     "\n",
-    "![dropdown.png](https://raw.githubusercontent.com/phys119/2022W2/master/Lab01-prelab/dropdown.png)\n",
+    "![dropdown.png](dropdown.png)\n",
     "\n",
     "The benefit of using a Jupyter notebook for the labs is that you can alternate between Markdown and Code cells. In a typical PHYS 119 lab session, we will have periods of notetaking when you are familiarizing yourself with the equipment, revising a measurement plan, or explaining your results and analysis. At other times, you will be using Python code to input data and perform analyses. A Jupyter notebook thus allows you to seamlessly transition between notetaking via formatted text (Markdown) and analysis (Python code)."
    ]
