Minor updates to Lab03

--- a/Lab03/Lab03.ipynb
+++ b/Lab03/Lab03.ipynb
@@ -157,7 +157,7 @@
    "id": "83d33fcb-6d91-4c37-998b-173e9fb0f65d",
    "metadata": {},
    "source": [
-    "## Part E - Your First Round of Measurements (10 minutes of data collection per angle)"
+    "## Part E - Measurements and Analysis"
    ]
   },
   {
@@ -253,12 +253,7 @@
    "cell_type": "markdown",
    "id": "8778f9ab-d956-4dfa-9319-daa7fa4611ea",
    "metadata": {},
-   "source": [
-    "***Tips:***\n",
-    "- A brief summary of your key results and key comparisons in 1-2 sentences.\n",
-    "- 1-2 sentences addressing the experimental goal and describing the conclusions you can make from the results of your comparisons. \n",
-    "- 1 sentence containing your thoughts for further investigation. If you were to spend more time with this experiment, what would you plan to do next?"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
