simplify sheet loading lab 03

--- a/Lab03/Lab03.ipynb
+++ b/Lab03/Lab03.ipynb
@@ -191,10 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment the sheet_copy line below (remove the leading \"#\") and then execute the cell to copy your\n",
-    "# first prelab spreadsheet \"prelab03_1\" to a new spreadsheet \"lab03_1\" for this lab\n",
-    "\n",
-    "#de1 = data_entry2.sheet_copy(\"prelab03_1\", \"lab03_1\")"
+    "#de1 = data_entry2.sheet(\"lab03_1\")"
    ]
   },
   {
@@ -305,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
