fix up Quick-setup

--- a/DuplicateNotebooks/Quick-setup.ipynb
+++ b/DuplicateNotebooks/Quick-setup.ipynb
@@ -20,40 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b0c6eb90-e1be-4585-92ab-60833be376de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;31merror\u001b[0m: \u001b[1mexternally-managed-environment\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m This environment is externally managed\n",
-      "\u001b[31m╰─>\u001b[0m \n",
-      "\u001b[31m   \u001b[0m The system-wide Python installation in Gentoo should be maintained\n",
-      "\u001b[31m   \u001b[0m using the system package manager (e.g. emerge).\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m If the package in question is not packaged for Gentoo, please\n",
-      "\u001b[31m   \u001b[0m consider installing it inside a virtual environment, e.g.:\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m python -m venv /path/to/venv\n",
-      "\u001b[31m   \u001b[0m . /path/to/venv/bin/activate\n",
-      "\u001b[31m   \u001b[0m pip install mypackage\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m To exit the virtual environment, run:\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m deactivate\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m The virtual environment is not deleted, and can be re-entered by\n",
-      "\u001b[31m   \u001b[0m re-sourcing the activate file.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: If you believe this is a mistake, please contact your Python installation or OS distribution provider. You can override this, at the risk of breaking your Python installation or OS, by passing --break-system-packages.\n",
-      "\u001b[1;36mhint\u001b[0m: See PEP 668 for the detailed specification.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install --user data_entry2"
    ]
@@ -75,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "68442067-7c79-417d-ba99-2902d0fe3392",
    "metadata": {},
    "outputs": [],
@@ -86,34 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d4d6092f-f7a8-4337-a2ee-59a4922bedfc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating directory for backups:  csv_backups/\n",
-      "Sheet name: test_sheet.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e9666a244594d21860fabc3ce9e3850",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Undo', style=ButtonStyle()), Button(description='Redo', styl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# this cell should generate a spreadsheet-like interface\n",
     "de1= data_entry2.sheet(\"test_sheet\")"
    ]
   },
