--- a/DuplicateNotebooks/Quick-setup.ipynb
+++ b/DuplicateNotebooks/Quick-setup.ipynb
@@ -39,7 +39,7 @@
     "- Press Stop My Server\n",
     "- Wait for a minute or so till it is stopped\n",
     "- Restart the server \n",
-    "- Navigate back into this document (2023W1/DuplicateNotebooks/Quick-setup \n",
+    "- Navigate back into this document (2023W1/DuplicateNotebooks/Quick-setup)\n",
     "- Execute the cells below"
    ]
   },
