--- a/Lab04/Lab04.ipynb
+++ b/Lab04/Lab04.ipynb
@@ -49,7 +49,7 @@
     "# Make sure to run this cell before running any other code cells\n",
     "%reset -f\n",
     "import numpy as np\n",
-    "import data_entry"
+    "import data_entry2"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
