--- a/Lab02/Lab02-makeup.ipynb
+++ b/Lab02/Lab02-makeup.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "# These should always be at the top. Don't forget to execute them\n",
+    "%reset -f\n",
     "import numpy as np\n",
     "import data_entry2"
    ]
@@ -164,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#de_round1 = data_entry.sheet(\"lab02_data_round1\")"
+    "#de_round1 = data_entry2.sheet(\"lab02_data_round1\")"
    ]
   },
   {
@@ -217,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#de_round2 = data_entry.copy_sheet(\"lab02_data_round1\", \"lab02_data_round2\")"
+    "#de_round2 = data_entry2.copy_sheet(\"lab02_data_round1\", \"lab02_data_round2\")"
    ]
   },
   {
@@ -236,13 +237,7 @@
    "cell_type": "markdown",
    "id": "7dbc0155-d839-4d2e-860b-dfe3dc02022a",
    "metadata": {},
-   "source": [
-    "***Tips:***\n",
-    "- A brief summary of how your key results and the results of your comparisons evolved throughout the lab.\n",
-    "- 1-2 sentences to describe and justify your major improvements and how they proved to be successful or unsuccessful. It may be helpful to use relative uncertainty to quantify your argument. \n",
-    "- 1-2 sentences addressing the experimental goal and describing the conclusions you can make from the results of your comparisons. \n",
-    "- 1 sentence containing your thoughts for further investigation. If you were to spend more time with this experiment, what would you plan to do next?"
-   ]
+   "source": []
   },
   {
    "attachments": {},
@@ -254,12 +249,10 @@
     "\n",
     "Steps for submission:\n",
     "\n",
-    "1. Run the cell below with `%reset -f`, which will clear any stored variables\n",
-    "2. Comment out (put a # before) the line with `%reset -f`\n",
-    "3. Click: Run => Run_All_Cells\n",
-    "4. Read through the notebook to ensure all the cells executed correctly and without error.\n",
-    "5. File => Save_and_Export_Notebook_As->HTML\n",
-    "6. Upload the HTML document to the lab submission assignment on Canvas."
+    "1. Click: Run => Run_All_Cells\n",
+    "2. Read through the notebook to ensure all the cells executed correctly and without error.\n",
+    "3. File => Save_and_Export_Notebook_As->HTML\n",
+    "4. Upload the HTML document to the lab submission assignment on Canvas."
    ]
   },
   {
@@ -268,11 +261,7 @@
    "id": "587723c8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%reset -f \n",
-    "# Clear all variables, start with a clean environment.\n",
-    "# comment out this line after you run it before you run all cells"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -287,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
