Fix lab 6 prelab

--- a/Lab06/Lab06-prelab.ipynb
+++ b/Lab06/Lab06-prelab.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reset -f\n",
     "import data_entry2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -1355,12 +1356,11 @@
     "\n",
     "Steps for submission:\n",
     "\n",
-    "1. Run the cell below with `%reset -f`, which will clear any stored variables\n",
-    "2. Comment out (put a # before) the line with `%reset -f`\n",
-    "3. Click: Run => Run_All_Cells\n",
-    "4. Read through the notebook to ensure all the cells executed correctly and without error.\n",
-    "5. File => Save_and_Export_Notebook_As->HTML\n",
-    "6. Upload the HTML document to the lab submission assignment on Canvas."
+    "1. Click: Run => Run_All_Cells\n",
+    "2. Read through the notebook to ensure all the cells executed correctly and without error.\n",
+    "3. File => Save_and_Export_Notebook_As->HTML\n",
+    "4. Inspect your downloaded html document\n",
+    "5. Upload the HTML document to the lab submission assignment on Canvas."
    ]
   },
   {
@@ -1369,11 +1369,7 @@
    "id": "5300ab2e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%reset -f \n",
-    "# Clear all variables, start with a clean environment.\n",
-    "# comment out this line after you run it before you run all cells"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
