little fixes to lab 7 prelab

--- a/Lab07/Lab07-prelab.ipynb
+++ b/Lab07/Lab07-prelab.ipynb
@@ -311,7 +311,7 @@
    "source": [
     "**Your turn #2**:\n",
     "* Find two points on the curve to measure voltage and time, then enter these values into your spreadsheet above. \n",
-    "* For the purposes of this exercise, use $u\\_t = 20\\,\\text{microseconds}$ for both time measurements and $u\\_V = 0.02\\,\\text{V}$ for both voltage measurements. In the actual lab you will use appropriate uncertainty estimation techniques to determine the uncertainties for your measurements.\n",
+    "* For the purposes of this exercise, use $u\\_t = 20\\ \\mu$s for both time measurements and $u\\_V = 0.02\\,\\text{V}$ for both voltage measurements. In the actual lab you will use appropriate uncertainty estimation techniques to determine the uncertainties for your measurements.\n",
     "* Once one row of data has been filled out, press \"Generate Vectors\". The cell below steps you through the calculation of $\\tau$; run this cell to see the result. You may also use this code to help you with calculations of $\\tau$ in the actual lab.\n",
     "\n"
    ]
@@ -334,11 +334,11 @@
    "id": "4f7f4d2d-ed3d-4ddd-81fc-e2200a687bbf",
    "metadata": {},
    "source": [
-    "The easiest early point to extract is the one that crosses both grid lines at $t_1$ = -500e-6 seconds, and $V_1$ = 1.75 V.\n",
+    "The easiest early point to extract is the one that crosses both grid lines at $t_1$ = -500 $\\mu$s, and $V_1$ = 1.75 V.\n",
     "\n",
-    "No other points cross both grid lines. However, the point at $t_2$ = +1000e-6 seconds looks like it is approximately 3/5ths of the way between V = 0.25V and V = 0.50V, so we will say $V_2$ = 0.40V.\n",
+    "No other points cross both grid lines. However, the point at $t_2$ = +1000 $\\mu$s looks like it is approximately 3/5ths of the way between V = 0.25 V and V = 0.50 V, so we will say $V_2$ = 0.40 V.\n",
     "\n",
-    "If you use these points, you should find that you get tau = 0.00101632s below"
+    "If you use these points, you should find that you get tau = 0.00101632 s below"
    ]
   },
   {
@@ -409,7 +409,7 @@
    "source": [
     "The time constant is defined as $\\tau = RC$. Since we have calculated $\\tau$ and set $R$ initially, we can solve for the capacitance, $C$\n",
     "\n",
-    "$$ C = \\frac{\\tau}{R} \\approx \\frac{0.001 s}{2000\\Omega} = 5 \\times 10^{-7} F = 0.5 \\mu F $$"
+    "$$ C = \\frac{\\tau}{R} \\approx \\frac{0.001 s}{2000\\Omega} = 5 \\times 10^{-7} F = 0.5\\ \\mu F $$"
    ]
   },
   {
@@ -521,9 +521,9 @@
    "source": [
     "If you used the example data that we extracted earlier, you should find that you get\n",
     "\n",
-    "* u_tau = [4.01827541e-05] s\n",
-    "* tau = [0.00101632] s\n",
-    "* Relative uncertainty u_tau/tau =  [0.03953733]"
+    "* u_tau = [4.0182e-05] s\n",
+    "* tau = [0.0010163] s\n",
+    "* Relative uncertainty u_tau/tau =  [0.0395]"
    ]
   },
   {
